fixed display of time and score remove keyboard when game finishes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">hexdec</string>
+    <string name="app_name">HexDec</string>
     <string name="title_activity_game">GameActivity</string>
 </resources>
